[package]
name = "hive-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
description = "A Rust client library for the Hive blockchain with 1:1 dhive API parity"
repository = "https://github.com/Vheissu/hive-rs"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
testnet = []

[dependencies]
aes = "0.8"
async-stream = "0.3"
bs58 = "0.5"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2"] }
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["recovery", "rand-std", "hashes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
